[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Barricade_1/Barricade_R.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Barricade_1/Barricade_U.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Barricade_1/Barricade_L.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Barricade_3RedandGreen/Red.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Barricade_1/Barricade_D.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Barricade_3RedandGreen/Green.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Barrconnect.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 97.2745, 40.6048 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 96.8952, 40.7906 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 41.5451, 96.9137 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40.767, 96.4036 )

[node name="Barrconnect" type="Node2D"]
script = ExtResource( 9 )

[node name="Barr1contact" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barr1contact"]
position = Vector2( 0, 194 )
shape = SubResource( 1 )
disabled = true

[node name="Barr1contactU" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barr1contactU"]
position = Vector2( 0, -194 )
shape = SubResource( 2 )
disabled = true

[node name="Barr1contactR" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barr1contactR"]
position = Vector2( 210, 0 )
shape = SubResource( 3 )
disabled = true

[node name="Barr1contactL" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barr1contactL"]
position = Vector2( -210, 0 )
shape = SubResource( 4 )
disabled = true

[node name="Barr1GreenU" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -194 )
z_index = 20
texture = ExtResource( 2 )

[node name="Barr1GreenD" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 194 )
z_index = 20
texture = ExtResource( 5 )

[node name="Barr1GreenL" type="Sprite" parent="."]
visible = false
position = Vector2( -206, 0 )
z_index = 20
texture = ExtResource( 3 )

[node name="Barr1GreenR" type="Sprite" parent="."]
visible = false
position = Vector2( 206, 0 )
z_index = 20
texture = ExtResource( 1 )

[node name="GreenR" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.407843 )
position = Vector2( 210.195, 0.204971 )
scale = Vector2( 0.279252, 1.81061 )
z_index = 21
texture = ExtResource( 6 )

[node name="GreenL" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.407843 )
position = Vector2( -210.145, -1.07027 )
scale = Vector2( 0.274594, 1.80014 )
z_index = 21
texture = ExtResource( 6 )

[node name="GreenU" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.407843 )
position = Vector2( -0.13129, -194.301 )
scale = Vector2( 0.647337, 0.757074 )
z_index = 21
texture = ExtResource( 6 )

[node name="GreenD" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.407843 )
position = Vector2( 0.893119, 194.285 )
scale = Vector2( 0.642954, 0.769108 )
z_index = 21
texture = ExtResource( 6 )

[node name="RedR" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.407843 )
position = Vector2( 209.88, 0.204952 )
scale = Vector2( 0.281352, 1.8106 )
z_index = 21
texture = ExtResource( 4 )

[node name="RedL" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.407843 )
position = Vector2( -209.961, -1.02443 )
scale = Vector2( 0.277397, 1.80098 )
z_index = 21
texture = ExtResource( 4 )

[node name="RedU" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.407843 )
position = Vector2( -0.2231, -194.88 )
scale = Vector2( 0.647948, 0.76486 )
z_index = 21
texture = ExtResource( 4 )

[node name="RedD" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.407843 )
position = Vector2( 0.897711, 194.286 )
scale = Vector2( 0.644833, 0.769108 )
z_index = 21
texture = ExtResource( 4 )

[connection signal="area_entered" from="Barr1contact" to="." method="_on_Barr1contact_area_entered"]
[connection signal="area_exited" from="Barr1contact" to="." method="_on_Barr1contact_area_exited"]
[connection signal="area_entered" from="Barr1contactU" to="." method="_on_Barr1contactU_area_entered"]
[connection signal="area_exited" from="Barr1contactU" to="." method="_on_Barr1contactU_area_exited"]
[connection signal="area_entered" from="Barr1contactR" to="." method="_on_Barr1contactR_area_entered"]
[connection signal="area_exited" from="Barr1contactR" to="." method="_on_Barr1contactR_area_exited"]
[connection signal="area_entered" from="Barr1contactL" to="." method="_on_Barr1contactL_area_entered"]
[connection signal="area_exited" from="Barr1contactL" to="." method="_on_Barr1contactL_area_exited"]
